Changed /status to /health and migrated to a common healthcheck package
